--- a/ament_copyright/package.xml
+++ b/ament_copyright/package.xml
@@ -11,6 +11,7 @@
   <license>Apache License 2.0</license>
 
   <exec_depend>ament_lint</exec_depend>
+  <exec_depend>python3-importlib-metadata</exec_depend>
 
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
